--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,31 +1,66 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "Ubuntu",
-	"image": "mcr.microsoft.com/devcontainers/base:noble",
-	"features": {
-		"ghcr.io/devcontainers/features/node:1": {}
-	},
-	"portsAttributes": {
-		"5173": {
-			"label": "Hello Website",
-			"onAutoForward": "openPreview"
-		}
-	},
-	"updateContentCommand": "npm install",
-	"postAttachCommand": "npm run dev",
-	"waitFor": "updateContentCommand",
-	"customizations": {
-		"vscode": {
-			"settings":
-			{
-    				"files.exclude": {
-        			"package-lock.json": true,
-        			".gitignore": true,
-        			"node_modules/": true
-    				},
-    				"editor.minimap.enabled": false
-			}
-		}
-	}
+    "name": "Ubuntu",
+    "image": "mcr.microsoft.com/devcontainers/base:noble",
+    "features": {
+        "ghcr.io/devcontainers/features/node:1": {}
+    },
+    "portsAttributes": {
+        "3000": {
+            "label": "Website",
+            "onAutoForward": "openPreview"
+        },
+        "7676": {
+            "label": "Compute",
+            "onAutoForward": "openPreview"
+        },
+        "5173": {
+            "label": "Vite",
+            "onAutoForward": "openPreview"
+        }
+    },
+    "updateContentCommand": "npm install",
+    "postAttachCommand": "npm run dev", 
+    "waitFor": "updateContentCommand",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "jkearins.action-buttons-ext@0.1.1",
+                "esbenp.prettier-vscode",
+                "dbaeumer.vscode-eslint"
+            ],
+            "settings": {
+                "files.exclude": {
+                    "package-lock.json": true,
+                    ".gitignore": true,
+                    "node_modules/": true,
+                    ".devcontainer/": true
+                },
+                "editor.minimap.enabled": false,
+                "actionButtons": {
+                    "commands": [
+                        {
+                            "name": "🪄 Prettify",
+                            "singleInstance": true,
+                            "useVsCodeApi": true,
+                            "command": "editor.action.formatDocument"
+                        },
+                        {
+                            "name": "💻 Terminal",
+                            "singleInstance": true,
+                            "useVsCodeApi": true,
+                            "command": "workbench.action.terminal.toggleTerminal"
+                        },
+                        {
+                            "name": "🚀 Deploy",
+                            "singleInstance": true,
+                            "command": "npm run build && npx --yes @fastly/compute-js-static-publish@latest --root-dir=./dist --output=./edge && cd ./edge && npm install && npx --yes @fastly/cli compute publish --accept-defaults --auto-yes || echo 'Grab an API key and add it your repo before deploying!'"
+                        }
+                    ],
+                    "defaultColor": "none"
+                }
+            }
+        }
+    }
 }
