--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,6 +56,12 @@
                             "name": "🚀 Deploy",
                             "singleInstance": true,
                             "command": "npm run build && npx --yes @fastly/compute-js-static-publish@latest --root-dir=./dist --output=./edge && cd ./edge && npm install && npx --yes @fastly/cli compute publish --accept-defaults --auto-yes || echo 'Grab an API key and add it your repo before deploying!'"
+                        },
+                        {
+                            "name": "🔎 Split",
+                            "singleInstance": true,
+                            "useVsCodeApi": true,
+                            "command": "workbench.action.moveEditorToNextGroup"
                         }
                     ],
                     "defaultColor": "none"
