--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,8 +28,7 @@
             "extensions": [
                 "jkearins.action-buttons-ext@0.1.1",
                 "esbenp.prettier-vscode",
-                "dbaeumer.vscode-eslint",
-                "gabrielgrinberg.auto-run-command"
+                "dbaeumer.vscode-eslint"
             ],
             "settings": {
                 "files.exclude": {
@@ -66,14 +65,7 @@
                         }
                     ],
                     "defaultColor": "none"
-                },
-                "auto-run-command.rules": [
-                {
-                    "condition": "isRunningInContainer",
-                    "command": "workbench.action.moveEditorToNextGroup",
-                    "message": "Splitting"
                 }
-    ]
             }
         }
     }
