--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-starter",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "node dev",
     "build": "vite build",
     "preview": "vite preview"
   },
