--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "share": "gh codespace ports visibility 5173:public -c $CODESPACE_NAME"
   },
   "devDependencies": {
     "vite": "^6.2.2"
