--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,13 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-    "name": "Ubuntu",
-    "image": "mcr.microsoft.com/devcontainers/base:noble",
-    "features": {
-        "ghcr.io/devcontainers/features/node:1": {}
-    },
-    "portsAttributes": {
+  "name": "Ubuntu",
+  "image": "mcr.microsoft.com/devcontainers/base:noble",
+  "features": {
+    "ghcr.io/devcontainers/features/node:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  },
+  "portsAttributes": {
         "3000": {
             "label": "Website",
             "onAutoForward": "openPreview"
@@ -19,54 +20,68 @@
             "label": "Vite",
             "onAutoForward": "openPreview"
         }
-    },
-    "updateContentCommand": "npm install",
-    "postAttachCommand": "npm run dev", 
-    "waitFor": "updateContentCommand",
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "jkearins.action-buttons-ext@0.1.1",
-                "esbenp.prettier-vscode",
-                "dbaeumer.vscode-eslint"
-            ],
-            "settings": {
-                "files.exclude": {
-                    "package-lock.json": true,
-                    ".gitignore": true,
-                    "node_modules/": true,
-                    ".devcontainer/": true
-                },
-                "editor.minimap.enabled": false,
-                "actionButtons": {
-                    "commands": [
-                        {
-                            "name": "🪄 Prettify",
-                            "singleInstance": true,
-                            "useVsCodeApi": true,
-                            "command": "editor.action.formatDocument"
-                        },
-                        {
-                            "name": "💻 Terminal",
-                            "singleInstance": true,
-                            "useVsCodeApi": true,
-                            "command": "workbench.action.terminal.toggleTerminal"
-                        },
-                        {
-                            "name": "🚀 Deploy",
-                            "singleInstance": true,
-                            "command": "if [ ! $FASTLY_API_TOKEN ]; then echo 'Grab an API key and add it your repo before deploying!'; else if [ ! -d './edge' ]; then npx --yes @fastly/compute-js-static-publish@latest --root-dir=./dist --output=./edge; fi && cd ./edge && npm install && npx --yes @fastly/cli compute publish --service-name=$CODESPACE_NAME --accept-defaults --auto-yes || echo 'Oops! Something went wrong. 😭'; fi"
-                        },
-                        {
-                            "name": "🔎 Split",
-                            "singleInstance": true,
-                            "useVsCodeApi": true,
-                            "command": "workbench.action.moveEditorToNextGroup"
-                        }
-                    ],
-                    "defaultColor": "none"
-                }
+  },
+  "updateContentCommand": "npm install",
+  "postAttachCommand": {
+    "inform": "bash helpers/welcome.sh",
+    "build": "npm run dev"
+  },
+  "waitFor": "updateContentCommand",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "jkearins.action-buttons-ext@0.1.1",
+        "dbaeumer.vscode-eslint"
+      ],
+      "settings": {
+        "files.exclude": {
+          "package-lock.json": true,
+          ".gitignore": true,
+          "node_modules/": true,
+          ".devcontainer/": true
+        },
+        "chat.sendElementsToChat.enabled": false,
+        "editor.minimap.enabled": false,
+        "actionButtons": {
+          "commands": [
+            {
+              "name": "🌈 Prettify",
+              "singleInstance": true,
+              "useVsCodeApi": true,
+              "command": "editor.action.formatDocument",
+              "tooltip": "Tidy up your code"
+            },
+            {
+              "name": "💻 Terminal",
+              "singleInstance": true,
+              "useVsCodeApi": true,
+              "command": "workbench.action.terminal.toggleTerminal",
+              "tooltip": "Open a terminal"
+            },
+            {
+              "name": "🔎 Split",
+              "singleInstance": true,
+              "useVsCodeApi": true,
+              "command": "workbench.action.moveEditorToNextGroup",
+              "tooltip": "Move your active tab to the side"
+            },
+            {
+              "name": "🔗 Share",
+              "singleInstance": true,
+              "command": "bash helpers/share.sh",
+              "tooltip": "Grab a link to share your draft site"
+            },
+            {
+              "name": "🚀 Publish",
+              "singleInstance": true,
+              "command": "bash helpers/publish.sh",
+              "tooltip": "Publish your content to Fastly Compute"
             }
+          ],
+          "defaultColor": "none",
+          "reloadButton": null
         }
+      }
     }
+  }
 }
